make y=0 axis more visible, fix bug with 0-value slice labels showing in legend

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -159,6 +159,10 @@ svg {
       stroke: white !important;
     }
   }
+
+  .axis .tick.major line {
+    stroke: #000;
+  }
 }
 
 //
